--- a/Readme
+++ b/Readme
@@ -1,26 +1,35 @@
 # 💇‍♀️ Sistema de Serviços de Beleza
 
-Este projeto implementa e testa diferentes tipos de serviços de beleza, utilizando **Java** e **JUnit** para validação.  
-A proposta é simular serviços como **corte de cabelo, depilação, sobrancelha e unhas**, além de utilizar um **Factory Pattern** para criação dos serviços de forma flexível.
+Este projeto implementa e testa diferentes tipos de **serviços de beleza**, utilizando **Java** e **JUnit** para validação.  
+O objetivo é simular serviços como **corte de cabelo, depilação, sobrancelha e unhas**, além de aplicar o **Factory Pattern** para a criação flexível e escalável dos serviços.
 
 ---
 
 ## 📂 Estrutura do Projeto
 
-- `ServicoCorteTest.java` → Testes do serviço de corte de cabelo  
-- `ServicoDepilacaoTest.java` → Testes do serviço de depilação  
-- `ServicoFactoryTest.java` → Testes do padrão Factory para criação de serviços  
-- `ServicoSobrancelhaTest.java` → Testes do serviço de sobrancelha  
-- `ServicoUnhasTest.java` → Testes do serviço de unhas  
+📌 Classes de Testes:
+- ✂️ **`ServicoCorteTest.java`** → Testes do serviço de corte de cabelo  
+- 🪒 **`ServicoDepilacaoTest.java`** → Testes do serviço de depilação  
+- 🏭 **`ServicoFactoryTest.java`** → Testes do padrão *Factory* para criação de serviços  
+- 👁️ **`ServicoSobrancelhaTest.java`** → Testes do serviço de sobrancelha  
+- 💅 **`ServicoUnhasTest.java`** → Testes do serviço de unhas  
 
 ---
 
 ## 🛠️ Tecnologias Utilizadas
 
-- **Java 11+**  
-- **JUnit 5** (para os testes unitários)  
-- **Maven/Gradle** (dependendo de como o projeto for configurado)  
+- ☕ **Java 11+**  
+- 🧪 **JUnit 5** (para os testes unitários)  
+- 📦 **Maven** ou **Gradle** (para gerenciamento do projeto e execução dos testes)  
 
 ---
 
-## Autor: Eduarda Araujo Carvalho
+## 📌 Diagrama de Classes
+
+![Diagrama UML](diagrama_servicos_simplificado.png)
+
+---
+
+## 👩‍💻 Autora
+
+**Eduarda Araujo Carvalho**  
